[build-system]
requires = ["hatchling>=1.15.0"]
build-backend = "hatchling.build"

[project]
name = "aps-data-flow"
version = "0.1.0"
description = "APS Data Flow Pipeline"
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "beautifulsoup4>=4.9.0",
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=0.5.0",
    "google-auth-httplib2>=0.1.0",
    "google-api-python-client>=2.0.0",
    "supabase>=1.0.0",
    "lxml>=4.6.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src"]
